--- a/app/javascript/components/components/Header.css
+++ b/app/javascript/components/components/Header.css
@@ -1,3 +1,10 @@
 .Header {
+    overflow: hidden;
     background-color: aqua;
+    text-decoration: none;
+    float: left;
+    display: flex;
+    justify-content: space-around;
+    /* padding: 0 25px; */
+    width: 100%;
 }
